--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
-  "name": "COMP397_BoilerPlate",
+  "name": "summoner_of_guns",
   "authors": [
-    "wbalaniucCentennialCollege <wbalaniu@my.centennialcollege.ca>"
+    "Riml<ilmir.taychinov@gmail.com>"
   ],
   "description": "",
   "main": "",
